objects/ssot__FundingAwardRequirement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedContactId__c</fullName>
        <label>Assigned Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedUserId__c</fullName>
        <label>Assigned User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDateTime__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardId__c</fullName>
        <label>Funding Award</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardReqStatus__c</fullName>
        <label>Funding Award Requrement Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingAwardReqType__c</fullName>
        <label>Funding Award Requirement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FundingDisbursementId__c</fullName>
        <label>Funding Disbursement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Funding Award Requirement Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <label>Is Submitted</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedDateTime__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670493979_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardRequirement_FundingDisbu_rel</label>
        <referenceTo>ssot__FundingAwardDisbursement__dlm</referenceTo>
        <relationshipLabel>FundingAwardRequirement_FundingDisbu_rel</relationshipLabel>
        <relationshipName>rel_1716670493979_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726628472_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardRequirement_AssignedUser_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>FundingAwardRequirement_AssignedUser_rel</relationshipLabel>
        <relationshipName>rel_1716726628472_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726629875_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingAwardRequirement_FundingAward_rel</label>
        <referenceTo>ssot__FundingAward__dlm</referenceTo>
        <relationshipLabel>FundingAwardRequirement_FundingAward_rel</relationshipLabel>
        <relationshipName>rel_1716726629875_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>